# Fruit-Fall

./: Alex_Ostapyuk_Fall_24.sln  CMakeLists.txt  ReadME.txt
MyGame/: CMakeLists.txt  FruitFall.cpp  FruitFall.h  MyGame.vcxproj  MyGame.vcxproj.filters  TheGame.cpp  counter.cpp  counter.h
Power/: CMakeLists.txt  Image.cpp  Image.h  ImageImpl.h  KeyCodes.h  Power.vcxproj  Power.vcxproj.filters  PowerApp.cpp  PowerApp.h  PowerEvents.cpp  PowerEvents.h  PowerUtil.h  PowerWindow.cpp  PowerWindow.h  Renderer.cpp  Renderer.h  RendererImpl.h  Shaders.cpp  Shaders.h  ShadersImpl.h  StartOff.h  Unit.cpp  Unit.h  WindowImpl.h  pch.h
Power/PowerAssets/Shaders/: defaultFragmentShader.glsl  defaultVertexShader.glsl
Power/codeGLFW/: WindowGLFW.cpp  WindowGLFW.h
Power/codeOpenGL/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShaders.cpp  OpenGLShaders.h
Power/include/: Power.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
glfw_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake
glfw_build/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj  update_mappings.vcxproj.filters
glfw_build/src/Debug/: glfw3dll.exp
glfw_build/src/glfw.dir/Debug/: glfw3.dll.recipe  glfw3.ilk
glfw_build/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  glfw.lastbuildstate  (+7 more)
stbi/: stbi.vcxproj
